fix trainee dashboard when collapse training program

--- a/DCC/client/css/homepage.css
+++ b/DCC/client/css/homepage.css
@@ -1200,11 +1200,7 @@ h6 {
     padding-top: 90px;
   }
 }
-footer {
-    padding: 50px 0;
-    background-color: #f8f8f8;
-    font-size: 15px;
-}
+
 
 p.copyright {
     margin: 15px 0 0;
