--- a/DCC/client/css/style.css
+++ b/DCC/client/css/style.css
@@ -255,7 +255,6 @@ textarea {
 .main {
 	padding-bottom: 2em;
 
-	border-bottom: 1px solid #000;
 }
 
 
